# Appium-Automation

./: .env.example  .gitignore  ARCHITECTURE.md  DEVICE_CONFIGURATION_GUIDE.md  GITHUB_PUSH.md  GITHUB_QUICK_REFERENCE.md  GITHUB_SETUP.md  INDEX.md  LOCAL_APP_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFY_APP_INSTALLATION.md  __init__.py  behave.ini  conftest.py  push-to-github.ps1  push-to-github.sh  pyproject.toml  verify_app_installation.py
.github/workflows/: qa-automation.yml
api/clients/: auth_client.py
config/: settings.py
core/: appium_manager.py  logger.py  playwright_manager.py  retry_handler.py  screenshot_manager.py  wait_utils.py
database/: db_manager.py
docker/: Dockerfile  docker-compose.yml
features/: environment.py  login.feature  mobile_login.feature
features/steps/: mobile_login_steps.py
fixtures/: conftest.py
jenkins/: Jenkinsfile  README.md
mobile_pages/: __init__.py
mobile_pages/login/: __init__.py  actions.py  assertions.py  full_advisory.py  locators.py  page.py  short_advisory.py
pages/login/: actions.py  assertions.py  locators.py  page.py
step_definitions/: login_steps.py  mobile_login_steps.py
tests/e2e/: test_login.py
